--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sulfano Agus Fikri</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12"><h2>Language</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/language/indonesia.png"></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/language/english.png"></div></div></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><h2>Operating System</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/operating-system/windows.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/operating-system/ubuntu.png" alt=""></div></div></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><h2>Database</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/mysql.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/postgresql.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/mongodb.png" alt=""></div></div></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><h2>Service</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/service/php.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/service/nodejs.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/service/java.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/service/wordpress.png" alt=""></div></div></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><h2>Web</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/web/angularjs.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/web/reactjs.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/web/vuejs.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/web/jquery.jpg" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/web/js.png" alt=""></div></div></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><h2>UI</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/ui/css.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/ui/scss.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/ui/stylus.png" alt=""></div></div></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><h2>Mobile</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/mobile/ionic.png" alt=""></div></div></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"><h2>Multimedia</h2></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/multimedia/photoshop.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/multimedia/premiere.png" alt=""></div></div></div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 </body>
