--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <div class="col-md-12"><h2>Database</h2></div>
             <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/mysql.png" alt=""></div></div></div>
             <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/postgresql.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/sql-server.png" alt=""></div></div></div>
+            <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/oracle.png" alt=""></div></div></div>
             <div class="col-md-2"><div class="box"><div class="box-content"><img class="box-img" src="assets/database/mongodb.png" alt=""></div></div></div>
         </div>
         <div class="row">
