--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Wedding | Fikri & Ezi</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Dengan memohon Rahmat dan Ridho Allah SWT seraya melafazkan do’a dengan karunia-Nya semoga menuntun bahtera hidup baru putra-putri kami yang tercinta. Kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri resepsi pernikahan putra-putri kami" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="site.webmanifest" />
     <link
