--- a/index.html
+++ b/index.html
@@ -98,7 +98,20 @@
         </div>
       </div>
       <!-- Slider Area End-->
-
+      <section
+      class="gift-area gift-padding fix"
+      data-background="assets/img/gallery/section_bg3.png"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="gift-caption text-center">
+              <h2>Maimbau Baralek</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
       <!--? Contact form Start -->
       <div class="contact-form section-padding30 fix">
         <div class="container">
@@ -221,51 +234,13 @@
               <div class="single-gallery mb-30">
                 <div
                   class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery1.png)"
+                  style="background-image: url(assets/img/pra/1.jpg)"
                 ></div>
                 <div class="thumb-content-box">
                   <div class="thumb-content">
                     <h3>image 01</h3>
                     <a
-                      href="assets/img/gallery/gallery1.png"
-                      class="menorie-icon"
-                    >
-                      <i class="ti-plus"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-8 col-md-6">
-              <div class="single-gallery mb-30">
-                <div
-                  class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery2.png)"
-                ></div>
-                <div class="thumb-content-box">
-                  <div class="thumb-content">
-                    <h3>image 02</h3>
-                    <a
-                      href="assets/img/gallery/gallery1.png"
-                      class="menorie-icon"
-                    >
-                      <i class="ti-plus"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-8 col-md-6">
-              <div class="single-gallery mb-30">
-                <div
-                  class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery3.png)"
-                ></div>
-                <div class="thumb-content-box">
-                  <div class="thumb-content">
-                    <h3>image 03</h3>
-                    <a
-                      href="assets/img/gallery/gallery1.png"
+                      href="assets/img/pra/1.jpg"
                       class="menorie-icon"
                     >
                       <i class="ti-plus"></i
@@ -278,13 +253,146 @@
               <div class="single-gallery mb-30">
                 <div
                   class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery4.png)"
+                  style="background-image: url(assets/img/pra/2.jpg)"
                 ></div>
                 <div class="thumb-content-box">
                   <div class="thumb-content">
-                    <h3>image 04</h3>
+                    <h3>Open</h3>
                     <a
-                      href="assets/img/gallery/gallery1.png"
+                      href="assets/img/pra/2.jpg"
+                      class="menorie-icon"
+                    >
+                      <i class="ti-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-gallery mb-30">
+                <div
+                  class="gallery-img"
+                  style="background-image: url(assets/img/pra/3.jpg)"
+                ></div>
+                <div class="thumb-content-box">
+                  <div class="thumb-content">
+                    <h3>Open</h3>
+                    <a
+                      href="assets/img/pra/3.jpg"
+                      class="menorie-icon"
+                    >
+                      <i class="ti-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-gallery mb-30">
+                <div
+                  class="gallery-img"
+                  style="background-image: url(assets/img/pra/4.jpg)"
+                ></div>
+                <div class="thumb-content-box">
+                  <div class="thumb-content">
+                    <h3>Open</h3>
+                    <a
+                      href="assets/img/pra/4.jpg"
+                      class="menorie-icon"
+                    >
+                      <i class="ti-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-gallery mb-30">
+                <div
+                  class="gallery-img"
+                  style="background-image: url(assets/img/pra/5.jpg)"
+                ></div>
+                <div class="thumb-content-box">
+                  <div class="thumb-content">
+                    <h3>Open</h3>
+                    <a
+                      href="assets/img/pra/5.jpg"
+                      class="menorie-icon"
+                    >
+                      <i class="ti-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-gallery mb-30">
+                <div
+                  class="gallery-img"
+                  style="background-image: url(assets/img/pra/6.jpg)"
+                ></div>
+                <div class="thumb-content-box">
+                  <div class="thumb-content">
+                    <h3>Open</h3>
+                    <a
+                      href="assets/img/pra/6.jpg"
+                      class="menorie-icon"
+                    >
+                      <i class="ti-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-gallery mb-30">
+                <div
+                  class="gallery-img"
+                  style="background-image: url(assets/img/pra/7.jpg)"
+                ></div>
+                <div class="thumb-content-box">
+                  <div class="thumb-content">
+                    <h3>Open</h3>
+                    <a
+                      href="assets/img/pra/7.jpg"
+                      class="menorie-icon"
+                    >
+                      <i class="ti-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-gallery mb-30">
+                <div
+                  class="gallery-img"
+                  style="background-image: url(assets/img/pra/8.jpg)"
+                ></div>
+                <div class="thumb-content-box">
+                  <div class="thumb-content">
+                    <h3>Open</h3>
+                    <a
+                      href="assets/img/pra/8.jpg"
+                      class="menorie-icon"
+                    >
+                      <i class="ti-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-gallery mb-30">
+                <div
+                  class="gallery-img"
+                  style="background-image: url(assets/img/pra/9.jpg)"
+                ></div>
+                <div class="thumb-content-box">
+                  <div class="thumb-content">
+                    <h3>Open</h3>
+                    <a
+                      href="assets/img/pra/9.jpg"
                       class="menorie-icon"
                     >
                       <i class="ti-plus"></i
