--- a/ezi.html
+++ b/ezi.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Wedding | Fikri & Ezi</title>
+    <title>Wedding | Ezi & Fikri</title>
     <meta
       name="description"
       content="Dengan memohon Rahmat dan Ridho Allah SWT seraya melafazkan do’a dengan karunia-Nya semoga menuntun bahtera hidup baru putra-putri kami yang tercinta. Kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri resepsi pernikahan putra-putri kami"
@@ -62,7 +62,7 @@
                       data-delay=".5s"
                       data-duration="2000ms"
                     >
-                      Fikri<strong> & </strong> Ezi
+                      Ezi<strong> & </strong> Fikri
                     </h1>
                     <p data-animation="fadeInLeft" data-delay=".9s">
                       will get married
@@ -211,15 +211,15 @@
                 </div>
                 <div class="card-bottom">
                   <ul>
-                    <li><i class="fas fa-calendar-alt"></i>06 Februari 2022</li>
-                    <li><i class="far fa-clock"></i>10:00 PM</li>
+                    <li><i class="fas fa-calendar-alt"></i>03 Februari 2022</li>
+                    <li><i class="far fa-clock"></i>11:00 PM</li>
                     <li>
                       <i class="fas fa-map-marker-alt"></i>Kediaman Mempelai
-                      Pria
+                      Wanita
                     </li>
                     <li>
-                      <i class="far fa-map"></i> Jl. Lansanak, no 184, Bukit
-                      kili, Kotobaru, Kubung
+                      <i class="far fa-map"></i> Jl. Lansanak, Bukit kili,
+                      Kotobaru, Kubung
                     </li>
                   </ul>
                 </div>
@@ -409,7 +409,7 @@
       <section class="contact-sections">
         <div class="d-area">
           <iframe
-            src="https://www.google.com/maps/d/embed?mid=1CujYBlCtw0jK78xpjfJd0WkUBXPOMydp&ehbc=2E312F"
+            src="https://www.google.com/maps/d/embed?mid=1KjgEgxhFPOtPHUAflv4DtQFVkuD1EfAd&ehbc=2E312F"
             width="100%"
             height="480"
           ></iframe>
@@ -437,9 +437,10 @@
                 <div class="single-footer-caption mb-50">
                   <div class="footer-tittle">
                     <ul>
-                      <li><a href="#">Sulvardi/Maryenti (Ayah/Ibu)</a></li>
-                      <li><a href="#">Maryanto/Liza(almh) (Paman/Ante)</a></li>
-                      <li><a href="#">Herman/Roze (Mamak/Etek)</a></li>
+                      <li><a href="#">Desmawati/Ahmad Fauzi (ibu/ayah)</a></li>
+                      <li><a href="#">Zulkifli/Dardiana (mamak/mintuo)</a></li>
+                      <li><a href="#">Sarmas/Emi (mamak/mintuo)</a></li>
+                      <li><a href="#">Muslim(alm)/Ilen (mamak/mintuo)</a></li>
                     </ul>
                   </div>
                 </div>
@@ -449,12 +450,11 @@
                   <div class="footer-tittle">
                     <ul>
                       <li>
-                        <a href="#"
-                          >Ahmad Sobirin/Era Susilastri (Pak Etek/Etek)</a
-                        >
+                        <a href="#">Asnah/Katik Pengulu(alm) (ibu/abah)</a>
                       </li>
-                      <li><a href="#">Latul/Gusmarlina (Pak Uncu/Uncu)</a></li>
-                      <li><a href="#">Ngasimin/Lismar (Kakek/Nenek)</a></li>
+                      <li><a href="#">Asmaniar(almh)/Ancin (ama/abak)</a></li>
+                      <li><a href="#">Erna/Yunus (mak uwo/ pak uwo)</a></li>
+                      <li><a href="#">Wilson/Wiwil (pak etek/etek)</a></li>
                     </ul>
                   </div>
                 </div>
@@ -463,9 +463,12 @@
                 <div class="single-footer-caption mb-50">
                   <div class="footer-tittle">
                     <ul>
-                      <li><a href="#">Marva Yurina (Adik)</a></li>
-                      <li><a href="#">Cahaya Aqila (Adik)</a></li>
-                      <li><a href="#">Zayyan Zia Rabbani (Adik)</a></li>
+                      <li>
+                        <a href="#">Imelda Fauzi/Etra Fernandes (kakak/ipar)</a>
+                      </li>
+                      <li><a href="#">Ravel Desfa Anyara (adik)</a></li>
+                      <li><a href="#">Resty Maizella (adik)</a></li>
+                      <li><a href="#">Arshad Fikar Abqary (keponakan)</a></li>
                     </ul>
                   </div>
                 </div>
